manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-policy-webhook
  labels:
    app: node-policy-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-policy-webhook
  template:
    metadata:
      name: node-policy-webhook
      labels:
        app: node-policy-webhook
    spec:
      containers:
        - name: node-policy-webhook
          image: node-policy-webhook:0.0.0-dev
          imagePullPolicy: Never
          volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 32Mi
      volumes:
      - name: webhook-certs
        secret:
          secretName: node-policy-webhook
      - name: webhook-config
        configMap:
          name: sidecar-injector-webhook-configmap
