manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-policy-webhook
  labels:
    app: node-policy-webhook
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: node-policy-webhook
