manifests/mutatingwebhook-tpl.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: node-policy-webhook
  labels:
    app: node-policy-webhook
webhooks:
  - name: node-policy-webhook.default.svc.cluster.local
    objectSelector:
      matchExpressions:
        - key: app
          operator: NotIn
          values: ["node-policy-webhook"]
    clientConfig:
      caBundle: ${CA_BUNDLE}
      service:
        name: node-policy-webhook
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
