manifests/mutatingwebhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: node-policy-webhook
  labels:
    app: node-policy-webhook
webhooks:
  - name: node-policy-webhook.default.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01EY3dOekV5TlRFME0xb1hEVE13TURjd05URXlOVEUwTTFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUZhCmdFMDMzcFhZZVU3SE1BdE96TmR4WkY0YWpTZzdVaVhUa3NDOXRoOEdqYVNnMlFBdU9ObjV0LzQ1Ukt5UmpQUUwKUzFtSnVRMXNYcGI2eS9DVDlZU05PeGJrOWpnaS9QWitRemJvWVRGR2hJdmNqdHNEZk9WOVR3ZHl0dExyQ3NlUQpjZFZTUks0Zjkw [...]
      service:
        name: node-policy-webhook
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        mutateme: enabled
